Only apply wsrep_trx_fragment_size to InnoDB tables

MDEV-22617 Galera node crashes when trying to log to slow_log table in streaming
replication mode